Fix spacing issue

--- a/css/style.css
+++ b/css/style.css
@@ -294,7 +294,7 @@ hr {
   position: relative;
   text-align: center;
   flex: 100%;
-  height: 100vh;
+  height: 100%;
   transform: translateY(10px);
 }
 
